@@ -10,6 +10,8 @@ ver 3.3.9
 * Embed sixel processing to mlterm which is built without --with-imagelib option
   instead of using 'mlimgloader' to improve performance.
 * './configure;make install' (without 'make') is available.
+* Bug fixes:
+  Fix corrupt scrolling within left-right margin which contains full-width characters.
 
 ver 3.3.8
 * Support rectangle selection by pressing alt key while selecting.
